// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileUploadControl renders default file upload control 1`] = `
<div>
  <div
    class="components-drop-zone"
    data-is-drop-zone="true"
  >
    <div
      class="components-drop-zone__content"
    >
      <div
        class="components-drop-zone__content-inner"
      >
        <svg
          aria-hidden="true"
          class="components-drop-zone__content-icon"
          focusable="false"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18.5 15v3.5H13V6.7l4.5 4.1 1-1.1-6.2-5.8-5.8 5.8 1 1.1 4-4v11.7h-6V15H4v5h16v-5z"
          />
        </svg>
        <span
          class="components-drop-zone__content-text"
        >
          Drop files to upload
        </span>
      </div>
    </div>
  </div>
  <div
    class="file-upload"
  >
    <div
      class="components-form-file-upload"
    >
      <button
        class="components-button is-secondary has-text has-icon"
        id="form-file-upload-field_key"
        type="button"
      >
        <svg
          class="gridicon gridicons-add-outline"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <path
              d="M12 4c4.411 0 8 3.589 8 8s-3.589 8-8 8-8-3.589-8-8 3.589-8 8-8m0-2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm5 9h-4V7h-2v4H7v2h4v4h2v-4h4v-2z"
            />
          </g>
        </svg>
        Upload file
      </button>
      <input
        accept=".pdf, image/png, image/jpeg"
        data-testid="form-file-upload-input"
        style="display: none;"
        type="file"
      />
    </div>
  </div>
</div>
`;

exports[`FileUploadControl renders disabled state 1`] = `
<div>
  <div
    class="components-drop-zone"
    data-is-drop-zone="true"
  >
    <div
      class="components-drop-zone__content"
    >
      <div
        class="components-drop-zone__content-inner"
      >
        <svg
          aria-hidden="true"
          class="components-drop-zone__content-icon"
          focusable="false"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18.5 15v3.5H13V6.7l4.5 4.1 1-1.1-6.2-5.8-5.8 5.8 1 1.1 4-4v11.7h-6V15H4v5h16v-5z"
          />
        </svg>
        <span
          class="components-drop-zone__content-text"
        >
          Drop files to upload
        </span>
      </div>
    </div>
  </div>
  <div
    class="file-upload"
  >
    <div
      class="components-form-file-upload"
    >
      <button
        class="components-button is-success is-secondary has-text has-icon"
        disabled=""
        id="form-file-upload-field_key"
        type="button"
      >
        <svg
          class="gridicon gridicons-checkmark"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <path
              d="M9 19.414l-6.707-6.707 1.414-1.414L9 16.586 20.293 5.293l1.414 1.414z"
            />
          </g>
        </svg>
        Upload file
      </button>
      <input
        accept=".pdf, image/png, image/jpeg"
        data-testid="form-file-upload-input"
        style="display: none;"
        type="file"
      />
    </div>
    <span
      class="upload-message"
    >
      file.pdf
    </span>
  </div>
</div>
`;

exports[`FileUploadControl renders loading state 1`] = `
<div>
  <div
    class="components-drop-zone"
    data-is-drop-zone="true"
  >
    <div
      class="components-drop-zone__content"
    >
      <div
        class="components-drop-zone__content-inner"
      >
        <svg
          aria-hidden="true"
          class="components-drop-zone__content-icon"
          focusable="false"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18.5 15v3.5H13V6.7l4.5 4.1 1-1.1-6.2-5.8-5.8 5.8 1 1.1 4-4v11.7h-6V15H4v5h16v-5z"
          />
        </svg>
        <span
          class="components-drop-zone__content-text"
        >
          Drop files to upload
        </span>
      </div>
    </div>
  </div>
  <div
    class="file-upload"
  >
    <div
      class="components-form-file-upload"
    >
      <button
        class="components-button is-secondary is-busy has-text has-icon"
        disabled=""
        id="form-file-upload-field_key"
        type="button"
      >
        <svg
          class="gridicon gridicons-add-outline"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <path
              d="M12 4c4.411 0 8 3.589 8 8s-3.589 8-8 8-8-3.589-8-8 3.589-8 8-8m0-2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm5 9h-4V7h-2v4H7v2h4v4h2v-4h4v-2z"
            />
          </g>
        </svg>
        Upload file
      </button>
      <input
        accept=".pdf, image/png, image/jpeg"
        data-testid="form-file-upload-input"
        style="display: none;"
        type="file"
      />
    </div>
  </div>
</div>
`;

exports[`FileUploadControl renders upload done state 1`] = `
<div>
  <div
    class="components-drop-zone"
    data-is-drop-zone="true"
  >
    <div
      class="components-drop-zone__content"
    >
      <div
        class="components-drop-zone__content-inner"
      >
        <svg
          aria-hidden="true"
          class="components-drop-zone__content-icon"
          focusable="false"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18.5 15v3.5H13V6.7l4.5 4.1 1-1.1-6.2-5.8-5.8 5.8 1 1.1 4-4v11.7h-6V15H4v5h16v-5z"
          />
        </svg>
        <span
          class="components-drop-zone__content-text"
        >
          Drop files to upload
        </span>
      </div>
    </div>
  </div>
  <div
    class="file-upload"
  >
    <div
      class="components-form-file-upload"
    >
      <button
        class="components-button is-success is-secondary has-text has-icon"
        id="form-file-upload-field_key"
        type="button"
      >
        <svg
          class="gridicon gridicons-checkmark"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <path
              d="M9 19.414l-6.707-6.707 1.414-1.414L9 16.586 20.293 5.293l1.414 1.414z"
            />
          </g>
        </svg>
        Upload file
      </button>
      <input
        accept=".pdf, image/png, image/jpeg"
        data-testid="form-file-upload-input"
        style="display: none;"
        type="file"
      />
    </div>
    <span
      class="upload-message"
    >
      file.pdf
    </span>
    <button
      aria-label="Remove file"
      class="components-button delete-uploaded-file-button has-icon"
      type="button"
    >
      <svg
        class="gridicon gridicons-trash"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <path
            d="M6.187 8h11.625l-.695 11.125A2 2 0 0115.121 21H8.879a2 2 0 01-1.996-1.875L6.187 8zM19 5v2H5V5h3V4a2 2 0 012-2h4a2 2 0 012 2v1h3zm-9 0h4V4h-4v1z"
          />
        </g>
      </svg>
    </button>
  </div>
</div>
`;

exports[`FileUploadControl renders upload failed state 1`] = `
<div>
  <div
    class="components-drop-zone"
    data-is-drop-zone="true"
  >
    <div
      class="components-drop-zone__content"
    >
      <div
        class="components-drop-zone__content-inner"
      >
        <svg
          aria-hidden="true"
          class="components-drop-zone__content-icon"
          focusable="false"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18.5 15v3.5H13V6.7l4.5 4.1 1-1.1-6.2-5.8-5.8 5.8 1 1.1 4-4v11.7h-6V15H4v5h16v-5z"
          />
        </svg>
        <span
          class="components-drop-zone__content-text"
        >
          Drop files to upload
        </span>
      </div>
    </div>
  </div>
  <div
    class="file-upload"
  >
    <div
      class="components-form-file-upload"
    >
      <button
        class="components-button is-secondary is-destructive has-text has-icon"
        id="form-file-upload-field_key"
        type="button"
      >
        <svg
          class="gridicon gridicons-add-outline"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <path
              d="M12 4c4.411 0 8 3.589 8 8s-3.589 8-8 8-8-3.589-8-8 3.589-8 8-8m0-2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm5 9h-4V7h-2v4H7v2h4v4h2v-4h4v-2z"
            />
          </g>
        </svg>
        Upload file
      </button>
      <input
        accept=".pdf, image/png, image/jpeg"
        data-testid="form-file-upload-input"
        style="display: none;"
        type="file"
      />
    </div>
    <span
      class="upload-message is-destructive"
    >
      Error message
    </span>
  </div>
</div>
`;
